# tabular-sense

./: .gitattributes  .gitignore  README.MD  pyproject.toml
data/seed/: address.txt  area.txt  bank-bin.csv  company.txt  compound_names.txt  hospital.txt  postcode.txt  recreation.txt  residential.txt  shopping.txt
data/vocab/: tabular_sense.model  tabular_sense.vocab
scripts/: build_vocabulary.py  d_model_calculator.py  sample_generator.py  sample_utils.py
scripts/corpus_generators/: email_generator.py  job_generator.py  name_generator.py  url_generator.py  useragent_generator.py  username_generator.py
scripts/seed_generators/: address_generator.py  company_generator.py  hospital_generator.py  recreation_generator.py  residential_generator.py  shopping_generator.py
scripts/variant_generators/: age_generator.py  amount_generator.py  bank_card_generator.py  boolean_generator.py  coordinate_generator.py  date_generator.py  datetime_generator.py  education_generator.py  ethnicity_generator.py  float_generator.py  gender_generator.py  id_card_generator.py  int_generator.py  ip_generator.py  percent_generator.py  phone_generator.py  plate_generator.py  priority_generator.py  state_generator.py  time_generator.py
src/tabular_sense/: __init__.py  interface.py  main.py  path.py  tester.py  trainer.py
src/tabular_sense/components/: collate.py  config.py  dataset.py  logger.py  metrics.py  model.py  positional_encoding.py  resume_strategy.py  sampler.py  tokenizer.py
src/tabular_sense/core/: constants.py  enum_util.py  enum_util.pyi  type_rule.py  utils.py
